[tool.poetry]
name = "numpy_turtle"
version = "0.3"
description = "Turtle graphics with NumPy"
authors = ["Joren Hammudogli <jhammudoglu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
