[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numpy_turtle"
version = "0.3.dev0"
description = "Turtle graphics with NumPy"
authors = [{name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "numpy >=1.25",
    "scikit-image >=0.20",
]

[dependency-groups]
dev = [
    "basedpyright >=1.23.2",
    "pytest >=8.3.4",
    "ruff >=0.9.0",
]

[tool.basedpyright]
include = ["numpy_turtle", "examples", "tests"]
ignore = [".venv"]
venv = ".venv"
venvPath = "."
stubPath = "."
pythonVersion = "3.11"
pythonPlatform = "All"
reportExplicitAny = false
reportUnusedCallResult = false

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level = "INFO"
minversion = "8.0"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
force-exclude = true
extend-exclude = ["docs/gallery"]  # TODO
indent-width = 4
line-length = 88
show-fixes = true
src = ["numpy_turtle", "examples", "tests"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "DOC",      # pydoclint
    "FBT",      # flake8-boolean-trap
    "CPY",      # flake8-copyright
    "EM",       # flake8-errmsg
    "TD",       # flake8-todos
    "FIX",      # flake8-fixme
    # pydocstyle
    "D104",     # undocumented-public-package
    "D100",     # undocumented-public-module
    "D200",     # fits-on-one-line
    "D205",     # blank-line-after-summary
    "D212",     # multi-line-summary-first-line
    # flake8-bandit
    "S101",     # assert
    # pylint
    "PLC0415",  # import-outside-top-level
    "PLR2004",  # magic-value-comparison
    # tryceratops
    "TRY003",   # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
